# target-weaviate

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
target_weaviate/: __init__.py  client.py  sinks.py  target.py
tests/: __init__.py  conftest.py  test_core.py
tests/target_test_streams/: test_stream.singer
